Fixed intro page abc project preview size on mobile

--- a/src/app/components/project-preview-abc/project-preview-abc.component.css
+++ b/src/app/components/project-preview-abc/project-preview-abc.component.css
@@ -105,3 +105,20 @@ h4 {
         padding-top: 10px;
     }
 }
+
+@media all and (max-width: 600px) {
+    #background img {
+        width: 73vw;
+        height: revert;
+    }
+
+    #text {
+        height: 72vh;
+    }
+
+    .case-study-flex {
+       display: none;
+    }
+
+    
+}
